--- a/relogio/relogio.qsf
+++ b/relogio/relogio.qsf
@@ -289,4 +289,5 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW[7]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW[8]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to SW[9]
+set_global_assignment -name VHDL_FILE muxGenerico2x1_bit.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
